Expanded implementation, added test cases for board and game